[tool.poetry]
name = "impressive-app"
version = "0.1.0"
description = "A very impressive app"
authors = ["Scott Hannan <scott.n.hannan@gmail.com>"]
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
docker = "^7.0.0"
ruff = "^0.4.2"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
