[tool.poetry]
name = "impressive-app"
version = "0.1.0"
description = "A very impressive app"
authors = ["Scott Hannan <scott.n.hannan@gmail.com>"]
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
docker = "^7.0.0"
ruff = "^0.5.0"
invoke = "^2.2.0"


[tool.poetry.group.ci.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
